Updated directory structure

--- a/cis-hardening/roles/cis-ol8-v2.0.0/handlers/main.yml
+++ b/cis-hardening/roles/cis-ol8-v2.0.0/handlers/main.yml
@@ -7,3 +7,10 @@
     enabled: True
     masked: False
     daemon_reload: True
+
+- name: restart aidecheck
+  ansible.builtin.systemd:
+    name: aidecheck
+    enabled: True
+    state: restarted
+
